Check return value of createNodeFromUDSEntry()

createNodeFromUDSEntry() can return a nullptr, which it does when
passed any URL from the baloosearch protocol.

BUG: 431079